test/corpus/properties.txt
================
With Description
================
[x] buy milk $ from the organic section

---

(source_file
  (root_action
    state: (state)
    name: (name)
    metadata: (description)))

=============
With Priority
=============
[x] buy groceries !1

---

(source_file
  (root_action
    state: (state)
    name: (name)
    metadata: (priority)))

==========
With Story
==========
[x] story test *Parent Story

---

(source_file
  (root_action
    state: (state)
    name: (name)
    metadata: (story)))

============
With Context
============
[ ] send email +office,computer

---

(source_file
  (root_action
    state: (state)
    name: (name)
    metadata: (context)))

===============
With Id no dash
===============
[x] task with id #01951111cfa6718db303d7107f4005b3

---

(source_file
  (root_action
    state: (state)
    name: (name)
    metadata: (id)))

=================
With Id with dash
=================
[x] task with id #01951111-cfa6-718d-b303-d7107f4005b3

---

(source_file
  (root_action
    state: (state)
    name: (name)
    metadata: (id)))
